--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -19,7 +19,7 @@
     scrollback_infinite = True
     palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     use_custom_command = True
-    custom_command = toolbox enter mytoolbx
+    custom_command = distrobox enter mytoolbx
     use_system_font = False
     bold_is_bright = True
     copy_on_selection = True
